2010-07-28  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium tests fix.
        Chromium Dev Tools: [REGRESSION] Pause is not working.

        https://bugs.webkit.org/show_bug.cgi?id=43118

        * inspector/front-end/InspectorBackendStub.js:

2010-07-28  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        WebInspector: Navigating to anchor prior to opening WebInspector
        makes resource have 'other' type.
        https://bugs.webkit.org/show_bug.cgi?id=43110

        * inspector/InspectorResource.cpp:
        (WebCore::InspectorResource::type):
        (WebCore::InspectorResource::resourceData):
        * inspector/front-end/ResourceView.js:
        (WebInspector.ResourceView.prototype._innerSelectContentTab):

2010-07-28  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] putImageData(): Combine premultiplication and BGR->RGB
        https://bugs.webkit.org/show_bug.cgi?id=43114

        Further optimized putImageData() by doing BGR->RGB inside the
        premultiplication routine.

        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::premultiplyABGRtoARGB): Renamed from premultiply.
        (WebCore::putImageData):

2010-07-28  Andrei Popescu  <andreip@google.com>

        Reviewed by Jeremy Orlow.

        [IndexedDB] IDBKeyRange should be a runtime-enabled feature.
        https://bugs.webkit.org/show_bug.cgi?id=43116

        IDBKeyRange should be enabled at runtime only when IndexedDB is also
        enabled.

        No new tests needed, functionality not changed.

        * bindings/generic/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::iDBKeyRangeEnabled):
        * page/DOMWindow.idl:

2010-07-28  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Forgot to land GNUmakefile.am changes, broke build in r64196.
